test/spec_vectors/f32/fail/module_11.wat
(module (func (result f32) (f32.trunc (i64.const 0))))